--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -27,4 +27,21 @@ a
   text-align center
   color #2c3e50
 .hello
+  //min-height 850px
+.header-height
+  height 900px
+
+.child-view
+  transition all .5s cubic-bezier(.55,0,.1,1)
   min-height 850px
+
+.slide-left-enter, .slide-right-leave-active
+  opacity 0
+  -webkit-transform translate(30px, 0)
+  transform translate(30px, 0)
+
+.slide-left-leave-active, .slide-right-enter
+  opacity 0
+  -webkit-transform translate(-30px, 0)
+  transform translate(-30px, 0)
+
